style.css
html, body {
    height: 100%;
}

body {
    font-family: Montserrat, Fraunces;
    background-color: hsl(30, 38%, 92%);
    margin:0;
    display: flex;
    align-items: center;
    justify-content: center;
}

.modal {
    background: white;
    width: 40%;
    border-radius: 10px;
    box-shadow: 2px 4px 16px rgba(0,0,0,.2);
    display: flex;
}

.image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-bottom-left-radius:10px;
    border-top-left-radius:10px;
}

.modal-content {
    padding: 30px;
    flex-direction: column;
}

.price {
    display: inline-flex;
    gap: 30px;
    align-items: center;
    color: green;
}

.price p {
    text-decoration:line-through;
}

p {
    font-size:14px;
    color: grey;
}

button {
    width: 100%;
    height: 60px;
    background-color: green;
    color: white;
    border: none;
    border-radius:10px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap:10px;
}

